--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="icon" href="assets/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>salmanDev</title>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 
 <body>
